<resources>
    <string name="app_name">nomad note</string>
    <string name="facebook_app_id">2158792287772424</string>
    <string name="fb_login_protocol_scheme">fb2158792287772424</string>
    <string name="kakao_scheme">kakao30c846cc5fc8a6f301a8fc0cc2e9e7f3</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="OAUTH_CLIENT_ID">LQpdkxmlxSIEru59aHTw</string>
    <string name="OAUTH_CLIENT_SECRET">99o13Fawjf</string>
    <string name="OAUTH_CLIENT_NAME">노마드노트</string>
    <string name="admob_id">ca-app-pub-5097070292431028~5074159055</string>

    <string name="join_by_email">이메일로 회원가입</string>
    <string name="emailET_hint">이메일 주소 입력</string>
    <string name="pwdET_hint">비밀번호 (영문,숫자,특수문자)</string>
    <string name="joinTV_text">회원가입</string>
    <string name="activity_login_google">구글 로그인</string>
    <string name="activity_login_facebook">페이스북 로그인</string>
    <string name="activity_login_login">로그인</string>
    <string name="activity_visit_visited">방문국가 기록</string>
    <string name="activity_visit_visited2">방문국가\n기록</string>
    <string name="activity_login_signup">회원가입</string>
    <string name="fragment_solo_style">여행스타일\n선택하기</string>
    <string name="fragment_solo_addnote">새글쓰기</string>
    <string name="activity_write_note">작성시간</string>
    <string name="fragment_scrap_keyword">연령대, 성별, 도시 검색</string>
    <string name="activity_write_location">위치</string>
    <string name="activity_write_time">현재시간</string>
    <string name="activity_write_spent">소비금액</string>
    <string name="activity_write_rome">로마</string>
    <string name="activity_write_healing">힐링 스타일</string>
    <string name="activity_write_hotplace">핫플레이스</string> <!--item_scrap hotplaceTV  , frag_setting hotplaceTV, activity_timeline hotplaceTV -->
    <string name="culturalstyle">문학 스타일</string> <!--item_scrap literatureTV  , frag_setting cultureTV, activity_timeline literatureTV -->
    <string name="historicalstyle">역사 스타일</string><!--item_scrap historyTV  , frag_setting historyTV, activity_timeline historyTV -->
    <string name="museumstyle">박물관 스타일</string> <!--item_scrap museumTV  , frag_setting museumTV, activity_timeline museumTV -->
    <string name="entertext">내용을 입력해주세요.</string> <!--acitivity_question contentET -->
    <string name="builderwanttopost">등록하시겠습니까?</string>
    <string name="builderyes">예</string>
    <string name="builderno">아니오</string>
    <string name="builderdelete">삭제하시겠습니까?</string>
    <string name="muineanswer">베트남 무이네의 붉은사막에서 즐거운 시간을 보내고 계신가요?</string>
    <string name="reply">답변하기</string>
    <string name="mytimeline">개인타임라인</string>
    <string name="seeallquestions">누적질문보기</string>
    <string name="searchbymap">지도검색</string>
    <string name="timelineofothers">타인타임라인</string>
    <string name="savedpoststimeline">스크랩타임라인</string>
    <string name="settings">설정</string>
    <string name="welcome">여행의 동반자</string>
    <string name="nomadnote">노마드노트</string>
    <string name="welcome2">환영합니다</string>
    <string name="travelstyle">여행스타일</string>
    <string name="editInformation">개인정보수정</string>
    <string name="memoryused">메모리 사용량</string>
    <string name="addusersettings">친구 추가 관리</string>
    <string name="paymentoptions">결제시스템</string>
    <string name="socialaccounts">SNS 연결정보</string>
    <string name="contactus">이용문의</string>
    <string name="deleteaccount">서비스 탈퇴</string>
    <string name="logout">로그아웃</string>
    <string name="travelquestion">어떤 여행스타일로 질문을 받으시겠습니까?</string>
    <string name="setprofile">길게 누르시면 프로필 사진을 변경할 수 있습니다</string>
    <string name="setmyinfo">개인정보 수정하기</string>
    <string name="setmyinfo2">개인정보수정</string>
    <string name="totalmemory">전체 메모리</string>
    <string name="searchphone">연락처로 검색</string>
    <string name="inquire">문의하기</string>
    <string name="enteryourname">이름을 입력하세요.</string>
    <string name="enteryouraddress">연락처를 입력하세요.</string>
    <string name="chooseyourgender">성별을 선택하세요</string>
    <string name="title">제목</string>
    <string name="createnote">글쓰기</string>
    <string name="addphonefriend">연락처로 친구 추가</string>
    <string name="searchphonenumber">연락처로 친구를 추가할 수 있습니다.</string>
    <string name="addphonenumber">추가하고 싶은 친구의 이름과 휴대전화 번호를 입력해 주세요.</string>
    <string name="test">세종문화회관</string>
    <string name="fra_setting_buy">결제하기</string>
    <string name="fra_setting_experien">기록된 여행추억을 공유해보세요</string>
    <string name="fra_setting_insta">인스타그램</string>
    <string name="fra_setting_facebook">페이스북</string>
    <string name="fra_setting_naverblog">네이버블로그</string>
    <string name="fra_setting_kakaostory">카카오스토리</string>
    <string name="activity_choosegender">성별을 선택하세요</string>
    <string name="activity_write_title">제목</string>
    <string name="acrivity_quest_logo">문의하기</string>
    <string name="item_mainimage">대표사진</string>
    <string name="artmuseumstyle">미술관 스타일</string>
    <string name="newfriendid">e-mail 로 친구를 추가할 수 있습니다.</string>
    <string name="addenterid">추가하고 싶은 친구의 e-mail를 입력해 주세요.</string>


    <!-- 변경 -->
    <!--<string name="searchid">ID 검색</string>-->
    <!--<string name="activity_login_kakao">카카오 시작</string>-->
    <!--<string name="activity_login_naver">네이버 시작</string>-->
    <string name="searchid">이메일 검색</string>
    <string name="activity_login_kakao">카카오 로그인</string>
    <string name="activity_login_naver">네이버 로그인</string>

    <!-- 추가-->
    <string name="auto_login">자동로그인</string>
    <string name="fra_setting_kakaotalk">카카오톡</string>
    <string name="member_delete">탈퇴하시겠습니까?</string>
    <string name="member_delete_confrim">정말 떠나시겠습니까?</string>
    <string name="item_scrap_cirti">이 정보를 인증하시겠습니까?</string>
    <string name="item_scrap_cirti_done">현지 정보를 인증합니다</string>
    <string name="enteryourage">나이를 입력해주세요.</string>
    <string name="total">총</string>
    <string name="view_my_friends">추가리스트로 보기</string>
    <string name="prd_1gb">1GB (9,000원)</string>
    <string name="prd_600mb">600MB (5,000원)</string>
    <string name="prd_20kb">20MB (무료)</string>
    <string name="enter_question_title">제목을 입력해주세요.</string>
    <string name="enter_question_contents">내용을 입력해주세요.</string>
    <string name="choose_pic_title">사진선택</string>
    <string name="choose_pic_done">첨부</string>
    <string name="do_login">로그인 하기</string>
    <string name="post_count">개</string>
    <string name="my_points">보유 포인트</string>
    <string name="transtrating">번역중...</string>
    <string name="authenticate_no">인증할 수 없습니다.</string>
    <string name="allow_permission">권한을 허용해주세요.</string>
    <string name="no_image_data">이미지가 없습니다.</string>
    <string name="instagram_not_installed">인스타그램이 설치되어 있지 않습니다.</string>
    <string name="over_free_space">무료 서비스 용량을 초과하였습니다.</string>
    <string name="unit">원</string>

    <!-- 시리얼 코드 메세지 -->
    <string name="voucher_error">시리얼 코드를 다시 확인해주세요.</string>
    <string name="facebook_required">페이스북이 설치되어 있지 않습니다.</string>
    <string name="delete_question">탈퇴하시면 모든 여행기록이 삭제가 됩니다.</string>
    <string name="delete_question2">정말 떠나시겠습니까?</string>
    <string name="delete_toast_message">모든 여행 기록이 삭제 되었습니다.</string>
    <string name="goodbyte_message">안녕히가십시오.</string>
    <string name="find_id">아이디찾기</string>
    <string name="find_password">비밀번호찾기</string>
    <string name="find_id_choice">아이디를 찾을 방법을 선택해주세요.</string>
    <string name="find_phone">등록된 휴대번호로 찾기</string>
    <string name="name">이름</string>
    <string name="phon_edit_message">휴대폰번호 (-없이 입력)</string>
    <string name="id">아이디</string>
    <string name="email">이메일</string>
    <string name="direct_input">직접입력</string>
    <string name="send_code">비밀번호 발송</string>
    <string name="find_sns_login">SNS 로그인으로 찾기</string>
    <string name="terms_and_conditions">이용약관</string>
    <string name="private_infomation">개인정보처리방침</string>
    <string name="business_infomation">사업자정보확인</string>
    <string name="service_registration_number">통신판매번호</string>
    <string name="company_registration_number">사업자등록번호</string>
    <string name="registration_status">신고현황</string>
    <string name="service_reporting">통신판매업 신고</string>
    <string name="corporation_individeual">법인여부</string>
    <string name="individual_business">개인</string>
    <string name="company_name">상호</string>
    <string name="nomadnote_global">노마드노트 (NOMADNOTE)</string>
    <string name="name_representative">대표자명</string>
    <string name="shin">신**</string>
    <string name="tel">대표 전화번호</string>
    <string name="service_mode">판매방식</string>
    <string name="internet">인터넷</string>
    <string name="handled_item">취급품목</string>
    <string name="multishop">종합몰, 상품권</string>
    <string name="email_global">전자우편(E-mail)</string>
    <string name="reporting_date">신고일자</string>
    <string name="business_address">사업장소재지(도로명)</string>
    <string name="business_location">서울특별시 서초구 강남대로 369 12층 1387호</string>
    <string name="internet_domain">인터넷도메인</string>
    <string name="host_server">호스트서버소재지</string>
    <string name="reporting_agency">통신판매업 신고기관명</string>
    <string name="company_message">본 자료는 전자상거래시장에서 소비자가 정확한 사업자 정보를 가지고 안전한거래를 할 수 있도록 전국 시,군,구에서 신고된 통신판매업자의 신원정보를 전자상거래소비자보호법 제12조 4항에 따라 제공하는 정보입니다. 사업자 정보에 대한 궁금한 사항이나 사업자의 신원정보가 정보공개 내용과 불일치 할 경우에는 사업자 정보검색시 확인되는 해당 신고기관(지방자치단체)에 문의하여 주시기바랍니다. 일부 사업자의 경우, 부가가치세법상 사업자 폐업신고는 하였으나 전자상거래법상 통신판매업 폐업 신고는 하지 않은 사례가 있을 수 있습니다. 소비자 피해를 방지하기 위해 부가가치세법상 사업자 폐업여부도 국세청 홈페이지(www.hometax.go.kr)의 사업자등록상태조회 코너를 통해 확인하시기바랍니다.</string>
    <string name="find_password_choice">비밀번호를 찾을 방법을 선택해주세요.</string>
    <string name="identity_verification">본인확인 후 비밀번호를 다시 설정할 수 있습니다.</string>
    <string name="enter_name">이름은 필수 입력입니다.</string>
    <string name="enter_phonenumber">연락처를 입력하세요.</string>
    <string name="withdrawal_done">탈퇴 처리가 완료되었습니다.</string>
    <string name="enter_id">아이디를 입력하세요</string>
    <string name="enter_email">이메일을 입력해주세요.</string>
    <string name="nomember">회원이 없습니다.</string>
    <string name="confirm">확인</string>
    <string name="searchkeyword">키워드검색</string>
    <string name="not_disturb">방해금지 시간대 설정</string>
    <string name="refuse_time">해당 시간대에 알림을 받지 않습니다.</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="block_notifications">알람 전체 차단</string>
    <string name="service_center">고객센터</string>


    <string name="voucher_used_error">이미 사용된 시리얼 코드입니다.</string>
    <string name="voucher_block_error">차단된 시리얼 코드입니다.</string>
    <string name="voucher_use">사용되었습니다.</string>
    <string name="started_message">시작하기를 눌러 이용약관 및 개인정보 처리방침, 위치기반 서비스 이용약관에 동의해주세요.</string>
    <string name="chk_info">개인정보 동의하기</string>
    <string name="find_pw_send_email">해당 이메일로 비밀번호를 전송하였습니다.</string>
    <string name="find_id_send_email">해당 이메일로 아이디를 전송하였습니다.</string>
    <string name="addtofriends">친구추가</string>
    <string name="check_email">이메일을 확인해주세요.</string>
    <string name="enter_password">비밀번호를 입력해주세요.</string>
    <string name="mismatch_password">비밀번호가 일치하지 않습니다.</string>
    <string name="info_check">개인정보 동의하기에 동의해주세요.</string>
    <string name="already_email">이미 사용중인 이메일입니다.</string>
    <string name="enter_are">지역은 필수입력 입니다.</string>
    <string name="add_friends_empty">일치하는 회원이 존재하지 않습니다.</string>
    <string name="add_friends">추가하였습니다.</string>
    <string name="add_friends_already">이미 친구입니다.</string>
    <string name="age">세</string>
    <string name="success_member">가입성공</string>
    <string name="delete_message">삭제</string>
    <string name="find_email">등록된 이메일로 찾기</string>
    <string name="back_message">\'뒤로\' 버튼을 한번 더 누르시면 종료됩니다.</string>
    <string name="duration_time">평균 체류시간</string>
    <string name="consumption_amount">평균 소비금액</string>
    <string name="seocho">2019-서울서초-0657</string>
    <string name="gavia">경기도 성남시 분당구 야탑동 343번지 2호 KT-IDC 5층</string>

    <string name="error">조회중 장애가 발생하였습니다.</string>

    <string name="already_joined">회원가입할 수 없습니다.</string>

</resources>
