<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/backIV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back" />
        </LinearLayout>


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="152dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_by_email"
                    android:textColor="#779ba4"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/background_border_radius5_000000"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:inputType="textEmailAddress"
                        android:hint="@string/emailET_hint"
                        android:textColorHint="#878787"
                        android:textSize="14dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_border_radius5_000000"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/pwET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/pwdET_hint"
                        android:inputType="textPassword"
                        android:textColorHint="#878787"
                        android:textSize="14dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/background_border_radius5_000000"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/pw2ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/pwdET_hint"
                        android:inputType="textPassword"
                        android:textColorHint="#878787"
                        android:textSize="14dp" />


                </LinearLayout>

                <TextView
                    android:id="@+id/joinTV"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/background_border_radius1_000000"
                    android:gravity="center"
                    android:text="@string/joinTV_text"
                    android:textColor="#ffffff"
                    android:textSize="12dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>