<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainViewLL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- 타이틀 -->
            <LinearLayout
                android:id="@+id/titleLL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/background_gradient">

                <LinearLayout
                    android:id="@+id/titleBackLL"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="25dp"
                    android:paddingRight="10dp"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/back_white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logoIVLL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/logoTV"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center"
                        android:textColor="#ffffff"
                        android:textSize="15sp" />


                    <ImageView
                        android:id="@+id/logoIV"
                        android:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2.5dp"
                        android:src="@mipmap/nomad_small" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="25dp"
                    android:paddingRight="10dp"
                    android:visibility="invisible">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/back_white" />

                </LinearLayout>


            </LinearLayout>

            <FrameLayout
                android:id="@+id/fragmentFL"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#B5B5B5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/soloLL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/soloIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:src="@mipmap/solotimeline" />


                    <TextView
                        android:id="@+id/soloTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mytimeline"
                        android:textColor="#878787"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/questLL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/questIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:src="@mipmap/quest_noclk" />


                    <TextView
                        android:id="@+id/questTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seeallquestions"
                        android:textColor="#878787"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mapsearchLL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mapsearchIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:src="@mipmap/map" />


                    <TextView
                        android:id="@+id/mapsearchTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/searchbymap"
                        android:textColor="#878787"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/otherLL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/otherIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:src="@mipmap/other_timeline" />


                    <TextView
                        android:id="@+id/otherTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timelineofothers"
                        android:textColor="#878787"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/scrapLL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/scrapIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:src="@mipmap/scrap_time" />


                    <TextView
                        android:id="@+id/scrapTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/savedpoststimeline"
                        android:textColor="#878787"
                        android:textSize="9sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/settingLL"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/settingIV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3dp"
                        android:src="@mipmap/setting" />


                    <TextView
                        android:id="@+id/settingTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"
                        android:textColor="#878787"
                        android:textSize="9sp" />

                </LinearLayout>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#888888" />


        </LinearLayout>


    </RelativeLayout>

</LinearLayout>