<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:id="@+id/backIV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@mipmap/back" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/manLL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/manckIV"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/circle_background1" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/man" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/femaleLL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/femaleckIV"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/circle_background1" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/famal" />

                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/choosegender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/chooseyourgender"
                android:textColor="#878787"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/background_border_radius5_000000"
                android:padding="10dp">

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:singleLine="true"
                    android:hint="@string/enteryourname"
                    android:textColorHint="#878787"
                    android:textSize="14dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/background_border_radius5_000000"
                android:padding="10dp">

                <EditText
                    android:id="@+id/ageET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:singleLine="true"
                    android:hint="@string/enteryourage"
                    android:inputType="number"
                    android:textColorHint="#878787"
                    android:textSize="14dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_border_radius5_000000"
                android:padding="10dp">

                <EditText
                    android:id="@+id/phoneET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:singleLine="true"
                    android:hint="@string/enteryouraddress"
                    android:inputType="number"
                    android:textColorHint="#878787"
                    android:textSize="14dp" />


            </LinearLayout>

            <TextView
                android:id="@+id/startTV"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/background_border_radius1_000000"
                android:gravity="center"
                android:text="시작하기"
                android:textColor="#ffffff"
                android:textSize="12dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp"
                android:gravity="center"
                android:text="시작하기를 눌러 이용약관 및 개인정보 처리방침,\n위치기반 서비스 이용약관에 동의해주세요."
                android:textColor="#878787"
                android:textSize="10sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>